tests/error/array_err2.gw
#! [contains] partially empty array init
var int[2][] i;
